# myths-of-ulan-rust

./: .gitignore  Cargo.toml  README.md
game/: .gitignore  Cargo.toml
game/data/: loader.rs  mod.rs
game/data/items/consumables/: potions.json
game/data/items/weapons/: swords.json
game/data/loot_tables/: monster_loot.json
game/data/monsters/: goblins.json
game/data/npcs/: merchants.json
game/data/templates/: item_templates.rs  loot_tables.rs  mod.rs  npc_templates.rs
game/src/: components.rs  diagnostics.rs  game_state.rs  main.rs  monster_spawning.rs  resources.rs  setup.rs
game/src/data/: mod.rs
game/src/plugins/: combat.rs  mod.rs  monster.rs  player.rs  ui.rs
game/src/plugins/map/: mod.rs
game/src/systems/: item_spawning.rs  loot_system.rs  mod.rs  monster_spawning.rs
game/src/templates/: mod.rs  monster_templates.rs
game/tools/: validate_data.rs
src/: lib.rs  main.rs
src/core/: game_state.rs
src/entities/: mod.rs  player.rs  stats.rs
src/world/: dungeon.rs  mod.rs  room.rs  tile.rs
src/world/generators/: generator_traits.rs  mod.rs  simple_generator.rs
